--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
